--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 * {
   line-height: 20px;
+  font-family: "Inter", sans-serif;
 }
 
 .black-rounded {
